--- a/index.html
+++ b/index.html
@@ -17,27 +17,9 @@
   </head>
   <body>
     <header>
-      <div class="d-flex bg-gradient">
-        <div class="d-flex flex-grow-1">
-          <nav class="courseTitle">
-            <button class="navbar-brand border-0">
-              <img src="assets/img/logo.png" alt="logo" />
-            </button>
-          </nav>
-          <div class="flex-grow-1">
-            <div class="ReactTitle ps-3 d-flex align-items-center">
-              <img src="assets/img/logo-javascript@2x.png" alt="logo" />
-              <h3 class="mb-0">JS Basic Apps</h3>
-            </div>
-            <div class="d-flex ps-3 align-items-center">
-              <div class="flex-grow-1">
-                <h4>Type Ahead</h4>
-                <p class="pb-0 mb-3 text-start">Purpose: Auto complete (Display) search results based on search keywords of USA based Cities/States</p>
-                <p class="pb-0 mt-0 text-start"><a href="https://github.com/ramareddy-brs/type-ahead" target="_blank" >Git Repository</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="pt-3">
+        <h4 class="text-center"> Type Ahead</h4>
+        <p class="pb-0 mt-0 text-center"><a href="https://github.com/ramareddy-brs/tic-tac-toe" target="_blank" >Git Repository</a></p>
       </div>
     </header>
 
@@ -52,8 +34,7 @@
     </main>
 
     <footer class="footer footer-dark">
-      <div class="d-flex justify-content-between px-5">
-        <div>ALL RIGHTS RESERVED BRS STUDIO, INDIA</div>
+      <div class="d-flex justify-content-center px-5">
         <div>
           <button
             onclick="setTheme('#1A4B84')"
@@ -68,11 +49,9 @@
             class="theme-switch theme-switch-yellow_sea"
           ></button>
         </div>
-        <div>
-          <img src="assets/img/footer-logo.png" alt="logo" />
-        </div>
       </div>
     </footer>
+    
     <script src="assets/js/data.js" defer></script>
     <script src="assets/js/script.js" defer></script>
   </body>
